--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@types/chart.js": "^2.8.4",
     "angular-bootstrap-md": "^8.2.0",
+    "angularx-social-login": "^1.2.7",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
