--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "ng-flash-messages": "^0.3.0",
+    "ng-starrating": "^1.0.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
