--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "ng-flash-messages": "^0.3.0",
     "ng-starrating": "^1.0.7",
+    "ng6-toastr-notifications": "^1.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
